# storagedrive

./: README.md
client-cpp/: CMakeLists.txt  make_notes.txt  reset.sh
client-cpp/src/: boi.txt  http_requests.h  main.cpp  test.cpp
server-rust/: Cargo.toml
server-rust/src/: main.rs
